# MilkyTracker

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeAmigaToolchain.txt  CMakeCache.txt  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.md  INSTALL  INSTALL.md  Jenkinsfile  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  appveyor.yml  build.sh  build_gmake  build_macos.sh  build_rpi.sh  clean  compression.make  config.h  config.h.in  config.status  configure  configure.ac  configure.in  confup  fx.make  milkyplay.make  mmakefile.src  ppui.make  premake4  (+2 more)
docs/: CMakeLists.txt  ChangeLog.html  ChangeLog.rtf  Equalizer Design.doc  FAQ.html  MilkyTracker.html  MilkyTracker.rtf  TiTAN.nfo  readme_OSX.html  readme_OSX.rtf  readme_PocketPC.html  readme_PocketPC.rtf  readme_rtaudio  readme_unix
resources/music/: CMakeLists.txt  milky.xm  slumberjack.xm  sv_ttt.xm  theday.xm  universalnetwork2_real.xm
src/: Makefile  Makefile.am  Makefile.in  config.h
src/cli/: CLIParser.cpp  CLIParser.h  CMakeLists.txt
src/compression/: AIFFWriter.h  AIFFWriter.m  CMakeLists.txt  Decompressor.cpp  Decompressor.h  DecompressorGZIP.cpp  DecompressorGZIP.h  DecompressorLHA.cpp  DecompressorLHA.h  DecompressorLZX.cpp  DecompressorLZX.h  DecompressorPP20.cpp  DecompressorPP20.h  DecompressorQT.h  DecompressorQT.mm  DecompressorUMX.cpp  DecompressorUMX.h  DecompressorZIP.cpp  DecompressorZIP.h  Makefile  Makefile.am  Makefile.in  PP20.cpp  PP20.h  ZipExtractor.cpp  ZipExtractor.h  unlzx.cpp  unlzx.h
src/compression/.deps/: Decompressor.Po  DecompressorGZIP.Po  DecompressorLHA.Po  DecompressorLZX.Po  DecompressorPP20.Po  DecompressorUMX.Po  DecompressorZIP.Po  PP20.Po  ZipExtractor.Po  unlzx.Po
src/compression/lha/: dhuf.inl  extract.inl  header.inl  huf.inl  larc.inl  lharc.h  lhext.inl  maketbl.inl  shuf.inl  slide.inl  slidehuf.h  unlha.cpp  unlha32.h
src/compression/patches/: ax_check_aligned_access_required.m4
src/compression/zziplib/: MyIO.cpp  MyIO.h
src/fx/: CMakeLists.txt  Camera.cpp  Camera.h  FXAbstract.h  FXInterface.h  Filter.cpp  Filter.h  Fire.cpp  Fire.h  Makefile  Makefile.am  Makefile.in  Math3d.cpp  Math3d.h  ParticleBlobs.cpp  ParticleBlobs.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleFX.cpp  ParticleFX.h  ParticleFun.cpp  ParticleFun.h  ParticleScene.cpp  ParticleScene.h  PictureGlow.h  Starfield.cpp  Starfield.h  TCBSpline.cpp  TCBSpline.h  TCBSplineTest.cpp  TCBSplineTest.h  Texture.cpp  Texture.h  TexturedGrid.cpp  TexturedGrid.h  TexturedPlane.cpp  TexturedPlane.h  Twister.cpp  Twister.h  TwisterFX.cpp  (+3 more)
src/fx/.deps/: Camera.Po  Filter.Po  Fire.Po  Math3d.Po  ParticleBlobs.Po  ParticleEmitter.Po  ParticleFX.Po  ParticleFun.Po  ParticleScene.Po  Starfield.Po  TCBSpline.Po  TCBSplineTest.Po  Texture.Po  TexturedGrid.Po  TexturedPlane.Po  Twister.Po  TwisterFX.Po  fpmath.Po
src/midi/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  MidiTools.h
src/midi/haiku/: MidiSetup.cpp  MidiSetup.h  MilkyMidiConsumer.cpp  MilkyMidiConsumer.h
src/midi/osx/: MidiReceiver_CoreMIDI.h  MidiReceiver_CoreMIDI.mm
src/midi/posix/: MidiReceiver_pthread.cpp  MidiReceiver_pthread.h
src/midi/rtmidi/: RtMidi.cpp  RtMidi.h
src/midi/win32/: LongMsg.cpp  LongMsg.h  MIDIInDevice.cpp  MIDIInDevice.h  MIDIMsg.h  MidiReceiver_win32.cpp  MidiReceiver_win32.h  ShortMsg.cpp  ShortMsg.h  midi.h
src/milkyplay/: AudioDriverBase.cpp  AudioDriverBase.h  AudioDriverManager.cpp  AudioDriverManager.h  AudioDriver_COMPENSATE.h  AudioDriver_NULL.cpp  AudioDriver_NULL.h  AudioDriver_WAVWriter.cpp  AudioDriver_WAVWriter.h  CMakeLists.txt  ChannelMixer.cpp  ChannelMixer.h  ExporterXM.cpp  Limiter.h  LittleEndian.cpp  LittleEndian.h  Loader669.cpp  LoaderAMF.cpp  LoaderAMS.cpp  LoaderCBA.cpp  LoaderDBM.cpp  LoaderDIGI.cpp  LoaderDSM.cpp  LoaderDTM.cpp  LoaderFAR.cpp  LoaderGDM.cpp  LoaderIMF.cpp  LoaderIT.cpp  LoaderMDL.cpp  LoaderMOD.cpp  LoaderMTM.cpp  LoaderMXM.cpp  LoaderOKT.cpp  LoaderPLM.cpp  LoaderPSM.cpp  LoaderPTM.cpp  LoaderS3M.cpp  LoaderSTM.cpp  LoaderTMM.cpp  LoaderULT.cpp  (+51 more)
src/ppui/: BasicTypes.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  CheckBoxLabel.cpp  CheckBoxLabel.h  Container.cpp  Container.h  ContextMenu.cpp  ContextMenu.h  Control.cpp  Control.h  DialogBase.cpp  DialogBase.h  DialogFileSelector.cpp  DialogFileSelector.h  Dictionary.cpp  Dictionary.h  DictionaryKey.cpp  DictionaryKey.h  DisplayDeviceBase.h  Event.cpp  Event.h  Font.cpp  Font.h  Graphics.h  GraphicsAbstract.h  Graphics_15BIT.cpp  Graphics_16BIT.cpp  Graphics_24bpp_generic.cpp  Graphics_32bpp_generic.cpp  Graphics_ARGB32.cpp  Graphics_BGR24.cpp  Graphics_BGR24_SLOW.cpp  Graphics_BGRA32.cpp  Graphics_OGL.cpp  Graphics_OGL.h  Graphics_RGB24.cpp  (+46 more)
src/tmm/: CMakeLists.txt  _kiss_fft_guts.h  additive.cpp  adx.h  globals.h  kiss_fft.c  kiss_fft.h  mini.cpp  minicxx.cpp  noise.cpp  tmm.cpp  tmm.h  tmm_additive.cpp  tmm_convert.cpp  tmm_envelope.cpp  tmm_filter.cpp  tmm_noise.cpp  tmm_preset.h  tmm_structs.h
src/tools/: CMakeLists.txt  FontLibrary.cpp  Makefile  WAVExportParams.cpp  WAVExportParams.h  addons.txt  archivewriter.cpp  compile.sh  convertrawfont.cpp  export-to-wav.cpp  fontcompiler.cpp  generateAddons.sh  generateHelp.sh  genlargefont.cpp  gentinyfont.cpp  test.cpp
src/tracker/: .gitignore  ASCIISTEP16.h  Addon.cpp  Addon.h  Addons.h  AnimatedFXControl.cpp  AnimatedFXControl.h  CMakeCache.txt  CMakeLists.txt  ColorExportImport.cpp  ColorExportImport.h  ColorPaletteContainer.cpp  ColorPaletteContainer.h  ControlIDs.h  Convolver.cpp  Convolver.h  Decompressor.cpp  Decompressor.h  DecompressorPP20.cpp  DecompressorQT.h  DecompressorQT.mm  DecompressorZIP.cpp  DialogChannelSelector.cpp  DialogChannelSelector.h  DialogEQ.cpp  DialogEQ.h  DialogGroupSelection.cpp  DialogGroupSelection.h  DialogHandlers.cpp  DialogHandlers.h  DialogHelp.cpp  DialogHelp.h  DialogHelpText.h  DialogListBox.cpp  DialogListBox.h  DialogPanning.cpp  DialogPanning.h  DialogQuickChooseInstrument.cpp  DialogQuickChooseInstrument.h  DialogResample.cpp  (+192 more)
(+554 files in other folders)
