SUBDIRS = src

EXTRA_DIST = docs/ChangeLog.html docs/EqualizerDesign.doc docs/FAQ.html \
docs/MilkyTracker.html docs/TiTAN.nfo docs/readme_OSX.html \
docs/readme_PocketPC.html docs/readme_rtaudio docs/readme_unix \
platforms/osx/milkytracker_ppc.zip platforms/osx/milkytracker_sdl.zip \
platforms/osx/milkytracker_universal.zip \
platforms/win32/milkytracker_devcpp.zip platforms/win32/milkytracker_vs8.zip \
platforms/wince/milkytracker_evc3.zip resources/pictures/carton.ico \
resources/pictures/carton.png
