ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src


# Documentation
EXTRA_DIST = \
docs/ChangeLog.html \
docs/FAQ.html \
docs/MilkyTracker.html \
docs/TiTAN.nfo \
docs/readme_OSX.html \
docs/readme_PocketPC.html \
docs/readme_rtaudio \
docs/readme_unix


# Platform-specific build files
EXTRA_DIST += \
platforms/ppc-amigaos/inttypes.h

# Android
EXTRA_DIST += \
platforms/android/Application.mk \
platforms/android/project/.classpath \
platforms/android/project/.project \
platforms/android/project/AndroidManifest.xml \
platforms/android/project/default.properties \
platforms/android/project/gen/org/milkytracker \
platforms/android/project/gen/org/milkytracker/R.java \
platforms/android/project/jni/Android.mk \
platforms/android/project/jni/milkytracker \
platforms/android/project/jni/milkytracker/Android.mk \
platforms/android/project/jni/milkytracker/config.h \
platforms/android/project/jni/patch-sdl \
platforms/android/project/jni/sdl/Android.mk \
platforms/android/project/jni/sdl/src \
platforms/android/project/jni/sdl/src/audio \
platforms/android/project/jni/sdl/src/audio/android \
platforms/android/project/jni/sdl/src/audio/android/SDL_androidaudio.c \
platforms/android/project/jni/sdl/src/audio/android/SDL_androidaudio.h \
platforms/android/project/jni/sdl/src/video \
platforms/android/project/jni/sdl/src/video/android \
platforms/android/project/jni/sdl/src/video/android/SDL_androidvideo.c \
platforms/android/project/jni/sdl/src/video/android/SDL_androidvideo.h \
platforms/android/project/local.properties \
platforms/android/project/res/layout \
platforms/android/project/res/layout/main.xml \
platforms/android/project/res/raw \
platforms/android/project/res/raw/milky.xm \
platforms/android/project/res/values \
platforms/android/project/res/values/strings.xml \
platforms/android/project/src/org/milkytracker \
platforms/android/project/src/org/milkytracker/MainActivity.java \
platforms/android/readme.txt \
platforms/android/setup.sh

# Haiku
EXTRA_DIST += \
platforms/haiku/Add_Jamfiles.sh \
platforms/haiku/Jamfiles/Jamfile \
platforms/haiku/Jamfiles/Jamrules \
platforms/haiku/Jamfiles/src-compression-Jamfile \
platforms/haiku/Jamfiles/src-compression-zzlib-generic-Jamfile \
platforms/haiku/Jamfiles/src-fx-Jamfile \
platforms/haiku/Jamfiles/src-midi-Jamfile \
platforms/haiku/Jamfiles/src-milkyplay-Jamfile \
platforms/haiku/Jamfiles/src-ppui-Jamfile \
platforms/haiku/Jamfiles/src-ppui-osinterface-Jamfile \
platforms/haiku/Jamfiles/src-tracker-haiku-MilkySettings-Jamfile \
platforms/haiku/Jamfiles/src-tracker-Jamfile \
platforms/haiku/ReadMe_-_How_to_build_for_Haiku \
platforms/haiku/Remove_Jamfiles.sh

# OSX
EXTRA_DIST += \
platforms/osx/milkytracker_ppc.zip \
platforms/osx/milkytracker_sdl.zip \
platforms/osx/milkytracker_universal/English.lproj/main.nib/classes.nib \
platforms/osx/milkytracker_universal/English.lproj/main.nib/info.nib \
platforms/osx/milkytracker_universal/English.lproj/main.nib/objects.xib \
platforms/osx/milkytracker_universal/Info.plist \
platforms/osx/milkytracker_universal/milkytracker_universal.pch \
platforms/osx/milkytracker_universal/milkytracker_universal.xcodeproj/project.pbxproj \
platforms/osx/milkytracker_universal/version.plist

# Win32
EXTRA_DIST += \
platforms/win32/milkytracker_devcpp/build/empty \
platforms/win32/milkytracker_devcpp/MilkyTracker.dev \
platforms/win32/milkytracker_vs8.zip \
platforms/win32/milkytracker_vs9.zip

# WinCE
EXTRA_DIST += \
platforms/wince/milkytracker_evc3.zip \
platforms/wince/PocketPC_KeyConfig/KeyConfigDlg.cpp \
platforms/wince/PocketPC_KeyConfig/KeyConfigDlg.h \
platforms/wince/PocketPC_KeyConfig/newres.h \
platforms/wince/PocketPC_KeyConfig/PocketPC_KeyConfig.cpp \
platforms/wince/PocketPC_KeyConfig/PocketPC_KeyConfig.h \
platforms/wince/PocketPC_KeyConfig/PocketPC_KeyConfig.ico \
platforms/wince/PocketPC_KeyConfig/PocketPC_KeyConfig.rc \
platforms/wince/PocketPC_KeyConfig/Registry.cpp \
platforms/wince/PocketPC_KeyConfig/Registry.h \
platforms/wince/PocketPC_KeyConfig/resource.h \
platforms/wince/PocketPC_KeyConfig/StdAfx.cpp \
platforms/wince/PocketPC_KeyConfig/StdAfx.h


# Resources
EXTRA_DIST += \
resources/pictures/carton.icns \
resources/pictures/carton.ico \
resources/pictures/carton.png \
resources/pictures/drop.ico \
resources/pictures/ft2_style_12x12_spaced.png \
resources/pictures/IDC-Harmonica.bmp \
resources/pictures/IDC-Hoodlum.bmp \
resources/pictures/IDC-MicroKnight.bmp \
resources/pictures/milky2.png \
resources/pictures/milkytracker.png \
resources/pictures/oldschool.icns \
resources/pictures/Setup_Blue_Screen.ico \
resources/pictures/athena_ft2_style_12x12.png \
resources/fonts/ARIEL.8X8 \
resources/fonts/ATHENA.12X12 \
resources/fonts/ATHENA_SPACED.12X12 \
resources/fonts/DISORDERTRACKER2.8X8 \
resources/fonts/DX-FUTUR.8X8 \
resources/fonts/EK-MAC.8X8 \
resources/fonts/EK-SPACE.8X8 \
resources/fonts/FINELINE.8X8 \
resources/fonts/FN-ICE.8X8 \
resources/fonts/FN-LOWER.8X8 \
resources/fonts/FN-ROUND.8X8 \
resources/fonts/GRAFPAPR.8X8 \
resources/fonts/GTHS-BUG.8X8 \
resources/fonts/IDC-Harmonica.12X12 \
resources/fonts/IDC-Harmonica.8X8 \
resources/fonts/IDC-Hoodlum.8X8 \
resources/fonts/IDC-MicroKnight.12X12 \
resources/fonts/IDC-MicroKnight.8X8 \
resources/fonts/IDC-Topaz1.3.8X8 \
resources/fonts/IDC-Topaz2.0.8X8 \
resources/fonts/INVERSE.8X8 \
resources/fonts/J-CURSE.8X8 \
resources/fonts/J-ELECTR.8X8 \
resources/fonts/J-FLUX.8X8 \
resources/fonts/J-TERMO.8X8 \
resources/fonts/KANAFONT.8X8 \
resources/fonts/MOTIF.8X8 \
resources/fonts/NOTCH.8X8 \
resources/fonts/PEANUT.8X8 \
resources/fonts/PERISOFT.8X8 \
resources/fonts/REZ-ASCII.8X8 \
resources/fonts/SCRIPT.8X8 \
resources/fonts/SMALLCAP.8X8 \
resources/fonts/THICK.8X8 \
resources/fonts/TINY.6X5 \
resources/fonts/TINY_UPPERCASE.6x5 \
resources/fonts/XTSAMP.8X8 \
resources/fonts/ZERO.8X8 \
resources/fonts/ZIRCFONT.8X8 \
resources/milkytracker.desktop \
resources/music/milky.xm \
resources/music/slumberjack.xm \
resources/music/sv_ttt.xm \
resources/music/theday.xm \
resources/music/universalnetwork2_real.xm \
resources/pictures/16note2.ico

