#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(MilkyTracker, 0.1, www.milkytracker.net)
AC_CONFIG_SRCDIR(src)
AM_INIT_AUTOMAKE(milkytracker,0.0.1)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_MKDIR_P

# Checks for libraries.
# AC_CHECK_LIB([SDL], SDL_Init,, AC_MSG_ERROR(Please install libSDL))
# AC_CHECK_LIB([pthread], pthread_create,, AC_MSG_ERROR(pthread library required))
# AC_CHECK_LIB([asound], snd_hwdep_info,,)
# AC_CHECK_LIB([X11], XSync,, AC_MSG_WARN(X11 not found, enhancements disabled))
AM_PATH_ALSA(,
	RTMIDI="../midi/libmidi.a"
	RTMIDI_DIR="midi"
	AC_SUBST(RTMIDI)
	AC_SUBST(RTMIDI_DIR),
	AC_MSG_WARN([ALSA not found - midi support disabled]))
#AC_CHECK_LIB([jack], jack_client_new, LIBS="$LIBS -ldl", AC_MSG_WARN(JACK support disabled))
#AM_CONDITIONAL([JACK], [test x$HAVE_LIBJACK = xtrue])
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION,, AC_MSG_ERROR([Please install libSDL]))
#LIBS="$LIBS $SDL_LIBS"

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h inttypes.h limits.h malloc.h memory.h stddef.h stdint.h stdlib.h string.h strings.h sys/ioctl.h sys/param.h sys/time.h unistd.h X11/X.h jack/jack.h])
if [test x$HAVE_JACK_H = xtrue]; then
	LIBS="$LIBS -ldl"
fi

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STAT
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_ST_BLOCKS
AC_HEADER_TIME
AC_STRUCT_TM
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T
AC_C_VOLATILE
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FSEEKO
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STAT
AC_CHECK_FUNCS([atexit floor getcwd gettimeofday memmove memset munmap pow select sqrt strcasecmp strdup strerror strrchr])

AC_CONFIG_HEADER(config.h)
AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/compression/Makefile
                 src/fx/Makefile
                 src/midi/Makefile
                 src/milkyplay/Makefile
                 src/ppui/Makefile
                 src/tracker/Makefile])
AC_OUTPUT
#([Makefile src/Makefile src/midi/Makefile src/milkyplay/Makefile src/ppui/Makefile src/fx/Makefile src/tracker/Makefile src/compression/Makefile])

