SUBDIRS = milkyplay ${RTMIDI_DIR} ppui fx compression tracker
DIST_SUBDIRS = milkyplay midi ppui fx compression tracker
EXTRA_DIST = tools/FontLibrary.cpp tools/Makefile tools/TINY.6x5 tools/TINY_UPPERCASE.6x5 tools/archivewriter.cpp tools/compile.sh tools/convertrawfont.cpp tools/fontcompiler.cpp tools/genlargefont.cpp tools/gentinyfont.cpp tools/test.cpp